# transporte-sp

./: .gitignore  CLAUDE.md  CODE_STYLE.md  LICENSE-DATA  NOTICE.md  README.md
.github/workflows/: ci.yml  pages.yml  refresh.yml
data/raw/geosampa/2026-07-21/: manifest.json
data/raw/gtfs_sptrans/2026-07-21/: manifest.json
data/raw/osm/2026-07-21/: manifest.json
pipeline/: pyproject.toml
pipeline/src/transporte_sp/: __init__.py  cli.py  config.py  geo.py  model.py  naming.py  snapshot.py  validate.py
pipeline/src/transporte_sp/export/: __init__.py  formato.py  pages.py
pipeline/src/transporte_sp/merge/: __init__.py  lines.py  matching.py  precedence.py  stations.py
pipeline/src/transporte_sp/sources/: __init__.py  geosampa.py  gtfs_sptrans.py  overpass.py  wikidata.py
pipeline/tests/: conftest.py  test_build.py  test_geo.py  test_lines.py  test_matching.py  test_naming.py  test_pages.py  test_sources.py  test_validate.py
site/: astro.config.mjs  package-lock.json  package.json  tsconfig.json
site/public/dados/: conflicts.json  network.geojson
site/scripts/: check-links.mjs
site/src/components/: FichaEstacao.astro  FichaLinha.astro  Head.astro  Mapa.astro  MapaEstacao.astro  MapaLinha.astro  Nivel.astro  Origem.astro  Resumo.astro  Situacao.astro  TabelaDivergencias.astro  TabelaFontes.astro
site/src/data/: formato.ts  network.json  network.ts  redirects.json  sidebar.json
site/src/pages/: site.webmanifest.ts
site/src/plugins/: rehype-base-path.mjs
site/src/scripts/: wrap-tables.ts
site/src/styles/: custom.css  pills.css  tables.css
(+761 files in other folders)
