[project]
name = "transporte-sp"
description = "Pipeline that builds an auditable dataset of São Paulo's metropolitan mass transit"
version = "0.1.0"
readme = "../README.md"
requires-python = ">=3.11"
dependencies = [
    "typer",          # CLI
    "httpx",          # HTTP client for every source
    "pydantic>=2",    # domain model + provenance envelopes
    "python-dotenv",  # config via .env
    "unidecode",      # name normalisation for cross-source matching
    "certifi",        # some *.sp.gov.br hosts ship incomplete chains
]

[project.scripts]
transporte-sp = "transporte_sp.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/transporte_sp"]

[dependency-groups]
dev = ["ruff", "pytest", "pytest-cov"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=transporte_sp --cov-report=term-missing --cov-fail-under=80"

[tool.coverage.report]
exclude_also = ["if __name__ == .__main__.:", "if TYPE_CHECKING:"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
